--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>ESCAPE STEAM - Menu</title>
 </head>
 <body>
-    
+    <div class="main">
+        <h1>ESCAPE STEAM - Menu</h1>
+        <div class="content">
+            <div class="box">
+                <h2>Chimie</h2>
+                <img src="./img/chimie.png" alt="logo chimie">
+                <a href="./pages/quiz.html"><button id="next-btn">Start</button></a>
+            </div>
+            <div class="box">
+                <h2>Biologie</h2>
+                <img src="./img/biology.png" alt="logo biology">
+                <button id="next-btn"><a href="#">Start</a></button>
+            </div>
+            <div class="box">
+                <h2>Matematica</h2>
+                <img src="./img/math.jpg" alt="logo math">
+                <button id="next-btn"><a href="#">Start</a></button>
+            </div>
+            <div class="box">
+                <h2>Geografie</h2>
+                <img src="./img/geografie.jpg" alt="logo geografie">
+                <button id="next-btn"><a href="#">Start</a></button>
+            </div>
+            <div class="box">
+                <h2>Informatica</h2>
+                <img src="./img/info.jpg" alt="logo informatica">
+                <button id="next-btn"><a href="#">Start</a></button>
+            </div>
+        </div>
+    </div>
+    <script src=""></script>
 </body>
 </html>
